test/errors/resolution/tupleExpandNonTuple.chpl
proc f() {}
var x = 1;
f((...x));
