test/errors/resolution/tupleExpandNonTuple.1.good
tupleExpandNonTuple.chpl:3: error: cannot apply tuple expansion to an expression of non-tuple type
